[gd_scene load_steps=6 format=3 uid="uid://4jjeiax1v8vw"]

[ext_resource type="PackedScene" uid="uid://b6hfyudqc13i" path="res://clients/player/industry_window/factory_panel/factory_panel.tscn" id="1_ccflf"]
[ext_resource type="Script" path="res://clients/player/industry_window/industry_window.gd" id="1_ndiv1"]
[ext_resource type="Texture2D" uid="uid://27t85ws737vm" path="res://graphics/sprites/pop_types/craftsmen.png" id="2_4d3uw"]
[ext_resource type="FontFile" uid="uid://dpaiod0xc1xgs" path="res://graphics/fonts/pixel_2.ttf" id="2_04fyu"]
[ext_resource type="Texture2D" uid="uid://hk3mpt6pi11w" path="res://graphics/sprites/pop_types/clerks.png" id="4_kvdja"]

[node name="IndustryWindow" type="Panel"]
texture_filter = 1
offset_left = 448.0
offset_top = 256.0
offset_right = 1408.0
offset_bottom = 896.0
script = ExtResource("1_ndiv1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_4d3uw")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_04fyu")
theme_override_font_sizes/font_size = 20

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_kvdja")

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_04fyu")
theme_override_font_sizes/font_size = 20

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_04fyu")
theme_override_font_sizes/font_size = 20
text = " X "

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="FactoryPanel" parent="." instance=ExtResource("1_ccflf")]
visible = false
layout_mode = 2
offset_left = -432.0
offset_top = -920.0
offset_right = -232.0
offset_bottom = -670.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="close_window"]
